# tribbles-kiro

./: .gitignore  spec-starter.md
server/: pyproject.toml  requirements.txt  test_output.txt
server/db/: migrate.py  schema.sql
server/db/seeds/: __init__.py  seed_base_set.py  seed_more_tribbles_more_troubles.py  seed_no_tribble_at_all.py  seed_nothing_but_tribble.py  seed_runner.py  seed_trials_and_tribbleations.py  seed_trouble_with_tribbles.py
server/src/: __init__.py  main.py  models.py
server/src/ai/: __init__.py  (+1 more)
server/tests/: __init__.py  conftest.py  strategies.py  test_ai_controller.py  test_ai_controller_properties.py  test_auth_properties.py  test_auth_service.py  test_bonus_scoring.py  test_bonus_scoring_properties.py  test_card_repository.py  test_card_repository_properties.py  test_deck_service.py  test_deck_service_properties.py  test_decked_state.py  test_decked_state_properties.py  test_disconnection.py  test_disconnection_properties.py  test_expansion3_powers.py  test_expansion3_powers_properties.py  test_expansion4_powers.py  test_expansion4_powers_properties.py  test_expansion5_powers.py  test_expansion5_powers_properties.py  test_expansion6_powers.py  test_expansion6_powers_properties.py  test_game_end.py  test_game_end_properties.py  test_game_engine.py  test_game_engine_properties.py  test_handler.py  test_lobby_service.py  test_lobby_service_properties.py  test_powers.py  test_powers_properties.py  test_protocol.py  test_round_manager.py  test_scoring.py  test_scoring_properties.py  test_spectator.py  test_spectator_properties.py  (+2 more)
(+72 files in other folders)
